# futureboard

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.cmd  buildbase.cmd  preview.cmd  qmlscene.cmd  run.cmd  vcpkg.json
applications/pluginscanner/: CMakeLists.txt  build.cmd
applications/pluginscanner/resources/: version.rc.in
applications/pluginscanner/src/: main.cpp
applications/pluginscanner/src/core/: PluginScanner.cpp  PluginScanner.hpp
icon/: packicon.py
resources/: app.rc  qml.qrc  shared.qrc
resources/data/: menuitems.json
resources/qml/Styles/: Colors.qml  qmldir
resources/qml/desktop/: AudioManager.qml  ChordCircle.qml  ComboBox.qml  CommandPallette.qml  CustomPopup.qml  Main.qml  Timeline.qml  TrackHeader.qml  TrackView.qml  TrackWidget.qml  Transport.qml
resources/qml/desktop/MenuItems/: Items.qml  qmldir
resources/qml/desktop/Mixer/: MasterTrack.qml  MixerRack.qml  main.qml
resources/qml/desktop/PluginEditor/: Editor.qml
resources/qml/desktop/Preferences/: Main.qml
resources/qml/mobile/: Main.qml  Transport.qml
src/: main.cpp
src/common/: logging.hpp
src/core/: logger.cpp  logger.hpp  track.cpp  track.hpp  trackmanager.cpp  trackmanager.hpp
src/core/audioengine/: audioengine.cpp  audioengine.hpp  windowsdevices.cpp  windowsdevices.hpp
src/core/config/: configmanager.cpp  configmanager.hpp
src/core/system/: performancemeter.cpp  performancemeter.hpp
src/gui/desktop/: audiomanager.cpp  audiomanager.hpp  mainwindow.cpp  mainwindow.hpp  menubar.cpp  menubar.hpp  menuitem.cpp  menuitem.hpp  mixerview.cpp  mixerview.hpp  styles.hpp
testinterface/: AudioEngine.qml  audio_config.json  audio_manager_widget.py  main.py
webui/: bun.lockb  package.json
